--- a/librettiindex.html
+++ b/librettiindex.html
@@ -18,7 +18,7 @@
 	</p>
 </div>
 <p>I'm <emphasis>Lauren a dog crazy, dancer based in Brooklyn. I've been living in NYC for 8 years. I'm a theatrical lighting desinger and supervisor as a student of fullstack web development.</p>
-	
+	<p>new test code for github</p>
 	<input type="email" name="email me">
 	
 <footer id="bottom">
