--- a/librettiindex.html
+++ b/librettiindex.html
@@ -2,30 +2,37 @@
 <html>
 <head>
 	<link href="style.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400;1,700&amp;display=swap">
+	<link rel="stylesheet" type="text/css" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400;1,700&amp;display=swap">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<title>Lauren Libretti</title>
 </head>
 <body>
-<h1><strong>Lauren Libretti</strong></h1>
-<h2><em>Hello, I'm Lauren</em></h2>
-<hr> <a href="#bottom">Jump to bottom</a>
+<h1>Lauren Libretti</h1>
+<div class="topnav">
+    <a class="active" href="#home">home</a>
+    <a href="#webdev">web dev</a> 
+    <a href="#lx">lighting</a> 
+    <a href="#contact">contact</a> 
+</div>
+<h2><em>Hi, welcome to my site</em></h2>
 <div class="Lauren">
-	<p
+	<p>
 		<a href="file:///Users/laurenlibretti/Desktop/GA%20Application/Photos.html">
 	<img src="https://i.imgur.com/97UBhdE.jpg" alt="image of Lauren">
 </a>
 	</p>
 </div>
-<p>I'm <emphasis>Lauren a dog crazy, dancer based in Brooklyn. I've been living in NYC for 8 years. I'm a theatrical lighting desinger and supervisor as a student of fullstack web development.</p>
-	<p>new test code for github</p>
-	<input type="email" name="email me">
+<p>I'mLauren a dog crazy, dancer based in Brooklyn. I've been living in NYC for 8 years. I'm a theatrical lighting desinger and supervisor as a student of fullstack web development.
+	Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam earum rem quod tempore. Atque et, iusto laudantium magni sed, tenetur explicabo autem quae odio natus laborum nihil blanditiis, eaque exercitationem. </p>
+
 	
 <footer id="bottom">
-	<a href="https://www.facebook.com/profile.php?id=5138727">Facebook</a>
-	<a href="https://www.instagram.com/lalibretti/">Instagram</a>
-	<a href="https://www.laurenlibretti.com/">Lighting</a>
-	<br>
+	<a href="https://www.facebook.com/profile.php?id=5138727" class="fa fa-facebook">FB</a>
+	<a href="https://www.instagram.com/lalibretti/" class="in insta-instagram">Insta</a>
+	<a href="https://www.laurenlibretti.com/"class="lights light-lighting">Lx</a>
+    <br>
 	made with &hearts; by Lauren 
 </footer>
 </body>
