added contact page

--- a/librettiindex.html
+++ b/librettiindex.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <html lang="en-US">
 <head>
 	<link href="style.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/styles.css">
@@ -32,6 +33,7 @@
 	<a href="https://www.facebook.com/profile.php?id=5138727" class="fa fa-facebook">FB</a>
 	<a href="https://www.instagram.com/lalibretti/" class="in insta-instagram">Insta</a>
 	<a href="https://www.laurenlibretti.com/"class="lights light-lighting">Lx</a>
+    <br>
     <br>
 	made with &hearts; by Lauren 
 </footer>
