--- a/Contact.html
+++ b/Contact.html
@@ -15,6 +15,23 @@
     <a href="#lx">lighting</a> 
     <a href="#contact">contact</a> 
 </div>
+<form
+  action="https://formspree.io/mzbjqdlo"
+  method="POST">
+  <label>
+    email:
+    <input type="text" name="_replyto">
+  </label>
+  <br>
+  <br>
+  <label>
+    message:
+    <textarea name="message me"></textarea>
+  </label>
+<br>
+  <button type="submit">Send</button>
+</form>
+
 <footer id="bottom">
     <footer id="bottom">
         <a href="https://www.facebook.com/profile.php?id=5138727" class="fa fa-facebook">FB</a>
