Updates to carousel. need to fix formatting

--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+    <header>
     <h1>Lauren Libretti</h1>
     
 <div class="topnav">
@@ -15,8 +16,12 @@
     <a href="#lx">lighting</a> 
     <a href="#contact">contact</a> 
 </div>
-<form
-  action="https://formspree.io/mzbjqdlo"
+    </header>
+    <br>
+    <br>
+    <h2>Contact Lauren</h2>
+<div class="form">
+<form action="https://formspree.io/mzbjqdlo"
   method="POST">
   <label>
     email:
@@ -31,9 +36,8 @@
 <br>
   <button type="submit">Send</button>
 </form>
-
+</div>
 <footer id="bottom">
-    <footer id="bottom">
         <a href="https://www.facebook.com/profile.php?id=5138727" class="fa fa-facebook">FB</a>
         <a href="https://www.instagram.com/lalibretti/" class="in insta-instagram">Insta</a>
         <a href="https://www.laurenlibretti.com/"class="lights light-lighting">Lx</a>
@@ -42,6 +46,5 @@
         made with &hearts; by Lauren
 
 </footer>
-
 </body>
 </html>
