--- a/librettiindex.html
+++ b/librettiindex.html
@@ -10,6 +10,7 @@
 	<title>Lauren Libretti</title>
 </head>
 <body>
+    <header>
 <h1>Lauren Libretti</h1>
 <div class="topnav">
     <a class="active" href="#home">home</a>
@@ -17,6 +18,7 @@
     <a href="#lx">lighting</a> 
     <a href="#contact">contact</a> 
 </div>
+    </header>
 <h2><em>Hi, welcome to my site</em></h2>
 <div class="Lauren">
 	<p>
