--- a/Contact.html
+++ b/Contact.html
@@ -3,13 +3,13 @@
 <html lang="en-US">
 <head>
     <link rel="stylesheet" type="text/css" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/styles.css">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400;1,700&amp;display=swap">
     <title>Contact Lauren</title>
 
 </head>
 <body>
     <header>
     <h1>Lauren Libretti</h1>
-    
 <div class="topnav">
     <a class="active" href="#home">home</a>
     <a href="#webdev">web dev</a> 
