--- a/librettiindex.html
+++ b/librettiindex.html
@@ -14,10 +14,10 @@
        
 <h1>Lauren Libretti</h1>
 <div class="topnav">
-    <a class="active" href="#home">home</a>
-    <a href="#webdev">web dev</a> 
-    <a href="#lx">lighting</a> 
-    <a href="#contact">contact</a> 
+    <a class="active" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/librettiindex.html">home</a>
+    <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/webdev.html">web dev</a> 
+    <a  href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/lx.html">lighting</a> 
+    <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/Contact.html">contact</a> 
 </div>
     </header>
 
@@ -30,14 +30,20 @@
 </a>
 	</p>
 </div>
-<p>I'mLauren a dog crazy, dancer based in Brooklyn. I've been living in NYC for 8 years. I'm a theatrical lighting desinger and supervisor as a student of fullstack web development.
-	Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam earum rem quod tempore. Atque et, iusto laudantium magni sed, tenetur explicabo autem quae odio natus laborum nihil blanditiis, eaque exercitationem. </p>
+<p>I'm Lauren a budding web developer and lighting designer, based in Brooklyn. I've been living in NYC for 8 years. I'm a theatrical lighting desinger and supervisor and a student of fullstack web development.
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam earum rem quod tempore. Atque et, iusto laudantium magni sed, tenetur explicabo autem quae odio natus laborum nihil blanditiis, eaque exercitationem. 
+</p>
 
-	
 <footer id="bottom">
-	<a href="https://www.facebook.com/profile.php?id=5138727" class="fa fa-facebook">FB</a>
-	<a href="https://www.instagram.com/lalibretti/" class="in insta-instagram">Insta</a>
-	<a href="https://www.laurenlibretti.com/"class="lights light-lighting">Lx</a>
+    <a xlink href="https://www.facebook.com/profile.php?id=5138727" class="fa">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 10h-2v2h2v6h3v-6h1.82l.18-2h-2v-.833c0-.478.096-.667.558-.667h1.442v-2.5h-2.404c-1.798 0-2.596.792-2.596 2.308v1.692z"></path>
+    </svg>
+</a>
+    <a xlink href="https://www.instagram.com/lalibretti/" class="in insta-instagram"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 7.082c1.602 0 1.792.006 2.425.035 1.627.074 2.385.845 2.46 2.459.028.633.034.822.034 2.424s-.006 1.792-.034 2.424c-.075 1.613-.832 2.386-2.46 2.46-.633.028-.822.035-2.425.035-1.602 0-1.792-.006-2.424-.035-1.63-.075-2.385-.849-2.46-2.46-.028-.632-.035-.822-.035-2.424s.007-1.792.035-2.424c.074-1.615.832-2.386 2.46-2.46.632-.029.822-.034 2.424-.034zm0-1.082c-1.63 0-1.833.007-2.474.037-2.18.1-3.39 1.309-3.49 3.489-.029.641-.036.845-.036 2.474 0 1.63.007 1.834.036 2.474.1 2.179 1.31 3.39 3.49 3.49.641.029.844.036 2.474.036 1.63 0 1.834-.007 2.475-.036 2.176-.1 3.391-1.309 3.489-3.49.029-.64.036-.844.036-2.474 0-1.629-.007-1.833-.036-2.474-.098-2.177-1.309-3.39-3.489-3.489-.641-.03-.845-.037-2.475-.037zm0 2.919c-1.701 0-3.081 1.379-3.081 3.081s1.38 3.081 3.081 3.081 3.081-1.379 3.081-3.081c0-1.701-1.38-3.081-3.081-3.081zm0 5.081c-1.105 0-2-.895-2-2 0-1.104.895-2 2-2 1.104 0 2.001.895 2.001 2s-.897 2-2.001 2zm3.202-5.922c-.397 0-.72.322-.72.72 0 .397.322.72.72.72.398 0 .721-.322.721-.72 0-.398-.322-.72-.721-.72z"/>
+    </svg>
+    </a>
+    <a xlink href="https://www.laurenlibretti.com/"class="lights light-lighting">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 6.734c0 4.164-3.75 6.98-3.75 10.266h-1.992c.001-2.079.997-3.826 1.968-5.513.912-1.585 1.774-3.083 1.774-4.753 0-3.108-2.517-4.734-5.004-4.734-2.483 0-4.996 1.626-4.996 4.734 0 1.67.862 3.168 1.774 4.753.971 1.687 1.966 3.434 1.967 5.513h-1.991c0-3.286-3.75-6.103-3.75-10.266 0-4.343 3.498-6.734 6.996-6.734 3.502 0 7.004 2.394 7.004 6.734zm-4 11.766c0 .276-.224.5-.5.5h-5c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h5c.276 0 .5.224.5.5zm0 2c0 .276-.224.5-.5.5h-5c-.276 0-.5-.224-.5-.5s.224-.5.5-.5h5c.276 0 .5.224.5.5zm-1.701 3.159c-.19.216-.465.341-.753.341h-1.093c-.288 0-.562-.125-.752-.341l-1.451-1.659h5.5l-1.451 1.659z"/></svg></a>
     <br>
     <br>
 	made with &hearts; by Lauren 
