--- a/librettiindex.html
+++ b/librettiindex.html
@@ -10,9 +10,10 @@
 	<title>Lauren Libretti</title>
 </head>
 <body>
+    <div id="container">
     <header>
-       
 <h1>Lauren Libretti</h1>
+<hr>
 <div class="topnav">
     <a class="active" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/librettiindex.html">home</a>
     <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/webdev.html">web dev</a> 
@@ -48,4 +49,5 @@
     <br>
 	made with &hearts; by Lauren 
 </footer>
+</div>
 </body>
