--- a/webdev.html
+++ b/webdev.html
@@ -7,9 +7,10 @@
             <title>Lauren's web dev work</title>
         </head>
  <body>
+     <div id="container">
     <header>
-        <container>
         <h1>Lauren Libretti</h1>
+        <hr>
         <div class="topnav">
             <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/librettiindex.html">home</a>
             <a class="active" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/webdev.html">web dev</a> 
