--- a/Contact.html
+++ b/Contact.html
@@ -34,7 +34,7 @@
 <br>
 <label for="message">message:</label>
 <br>
-<input type="text" id="message" name="message">
+<input type="text" id="conmment" name="conmment">
   <!-- your other form fields go here -->
 
   <button type="submit">submit</button>
