--- a/librettiindex.html
+++ b/librettiindex.html
@@ -23,7 +23,7 @@
     </header>
 
 
-<h2><em>Hi, welcome to my site</em></h2>
+<h2>Hi, welcome to my site</h2>
 <div class="Lauren">
 	<p>
 		<a href="file:///Users/laurenlibretti/Desktop/GA%20Application/Photos.html">
