--- a/webdev.html
+++ b/webdev.html
@@ -17,7 +17,12 @@
             <a  href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/lx.html">lighting</a> 
             <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/Contact.html">contact</a> 
         </div>
-            </header>
+        </header>
+            <h2>Web Development</h2>
+
+             <svg class="computer"xmlns="http://www.w3.org/2000/svg" width="86" height="86" viewBox="0 0 24 24"><path d="M0 0v19h24v-19h-24zm22 17h-20v-15h20v15zm-6.599 4l2.599 3h-12l2.599-3h6.802zm-6.401-16l6 4.674-2.538.427 1.538 3.095-1.571.804-1.546-3.157-1.883 1.759v-7.602z"/>
+            </svg>
+ 
             <p>
                 Air plant XOXO la croix humblebrag hell of beard farm-to-table af. Marfa tousled raclette, schlitz pork belly single-origin coffee street art church-key. Selvage coloring book ennui pork belly occupy tacos. Fashion axe iceland sartorial, pour-over viral taiyaki seitan wayfarers deep v. Shabby chic chambray marfa humblebrag hella brunch enamel pin cliche mumblecore butcher. Direct trade echo park humblebrag vinyl, celiac vegan drinking vinegar messenger bag austin single-origin coffee church-key fanny pack helvetica yr.
 Dummy text? More like dummy thicc text, amirite?
@@ -26,7 +31,7 @@ Dummy text? More like dummy thicc text, amirite?
                 <a xlink href="https://github.com/lalibretti" class="github">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 6c-3.313 0-6 2.686-6 6 0 2.651 1.719 4.9 4.104 5.693.3.056.396-.13.396-.289v-1.117c-1.669.363-2.017-.707-2.017-.707-.272-.693-.666-.878-.666-.878-.544-.373.041-.365.041-.365.603.042.92.619.92.619.535.917 1.403.652 1.746.499.054-.388.209-.652.381-.802-1.333-.152-2.733-.667-2.733-2.965 0-.655.234-1.19.618-1.61-.062-.153-.268-.764.058-1.59 0 0 .504-.161 1.65.615.479-.133.992-.199 1.502-.202.51.002 1.023.069 1.503.202 1.146-.776 1.648-.615 1.648-.615.327.826.121 1.437.06 1.588.385.42.617.955.617 1.61 0 2.305-1.404 2.812-2.74 2.96.216.186.412.551.412 1.111v1.646c0 .16.096.347.4.288 2.383-.793 4.1-3.041 4.1-5.691 0-3.314-2.687-6-6-6z"/>
                     </svg>
-            </a>
+                 </a>
                 <a xlink href="https://www.linkedin.com/in/lauren-libretti-38a26a40/"class="linkedin">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 8c0 .557-.447 1.008-1 1.008s-1-.45-1-1.008c0-.557.447-1.008 1-1.008s1 .452 1 1.008zm0 2h-2v6h2v-6zm3 0h-2v6h2v-2.861c0-1.722 2.002-1.881 2.002 0v2.861h1.998v-3.359c0-3.284-3.128-3.164-4-1.548v-1.093z"/></svg>
                 </a>
