--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <html lang="en-US">
 <head>
-	<link href="style.css" rel="stylesheet">
+    <link rel="stylesheet"  type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/styles.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400;1,700&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
