updated nav links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1>Lauren Libretti</h1>
 <hr>
 <div class="topnav">
-    <a class="active" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/librettiindex.html">home</a>
+    <a class="active" href="/Users/laurenlibretti/codes/Project%201/Project-1-8.21.20/index.html">home</a>
     <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/webdev.html">web dev</a> 
     <a  href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/lx.html">lighting</a> 
     <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/Contact.html">contact</a> 
