Updated header links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <html lang="en-US">
 <head>
     <link rel="stylesheet"  type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400;1,700&amp;display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -15,10 +15,10 @@
 <h1>Lauren Libretti</h1>
 <hr>
 <div class="topnav">
-    <a class="active" href="/Users/laurenlibretti/codes/Project%201/Project-1-8.21.20/index.html">home</a>
-    <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/webdev.html">web dev</a> 
-    <a  href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/lx.html">lighting</a> 
-    <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/Contact.html">contact</a> 
+    <a class="active" href="index.html">home</a>
+    <a href="webdev.html">web dev</a> 
+    <a  href="lx.html">lighting</a> 
+    <a href="Contact.html">contact</a> 
 </div>
     </header>
 
