header links corrected

--- a/lx.html
+++ b/lx.html
@@ -22,10 +22,10 @@
         <h1>Lauren Libretti</h1>
         <hr>
         <div class="topnav">
-            <a href="/Users/laurenlibretti/codes/Project%201/Project-1-8.21.20/index.html">home</a>
-            <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/webdev.html">web dev</a> 
-            <a class="active" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/lx.html">lighting</a> 
-            <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/Contact.html">contact</a> 
+          <a href="index.html">home</a>
+          <a href="webdev.html">web dev</a> 
+          <a class="active" a  href="lx.html">lighting</a> 
+          <a href="Contact.html">contact</a> 
         </div>
         </header>
        <h2>Lighting Designs</h2>
