--- a/webdev.html
+++ b/webdev.html
@@ -13,10 +13,10 @@
         <h1>Lauren Libretti</h1>
         <hr>
         <div class="topnav">
-            <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.21.20/index.html">home</a>
-            <a class="active" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/webdev.html">web dev</a> 
-            <a  href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/lx.html">lighting</a> 
-            <a href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/Contact.html">contact</a> 
+            <a href="index.html">home</a>
+          <a class="active" a href="webdev.html">web dev</a> 
+          <a  href="lx.html">lighting</a> 
+          <a href="Contact.html">contact</a> 
         </div>
         </header>
             <h2>Web Development</h2>
