--- a/lx.html
+++ b/lx.html
@@ -49,7 +49,7 @@
                 </div>
               
                 <div class="item">
-                  <img src="images/_MG_2461.JPG" alt="Fresh Tracks" style="width:100%;">
+                  <img src="images/FreshTracks_0595_web.jpg" alt="Fresh Tracks" style="width:100%;">
                 </div>
               </div>
           
