--- a/lx.html
+++ b/lx.html
@@ -41,11 +41,11 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
                 <div class="item active">
-                  <img src="images/Jack_Ferver_Baranova-5566.jpg" alt="Jack Ferver" style="width:100%;">
+                  <img src="images/Jack_Ferver_Baranova-5566.jpg" alt="Everything is Imaginable" style="width:100%;">
                 </div>
           
                 <div class="item">
-                  <img src="images/171207_FreshTracks_Brendan_Drake_008.jpg" alt="Brendan Drake" style="width:100%;">
+                  <img src="images/171207_FreshTracks_Brendan_Drake_008.jpg" alt="Dance" style="width:100%;">
                 </div>
               
                 <div class="item">
