--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
     <html lang="en-US">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head>
     <link rel="stylesheet"  type="text/css" href="styles.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
-
-     <!--fronts/icons--><link rel="preconnect" href="https://fonts.gstatic.com">
-                        <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
+    <!--fonts/icons--><link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
+                        <link rel="preconnect" href="https://fonts.gstatic.com">
                         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
                         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--tailwind--><link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <!--bootstrap--><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<title>Lauren Libretti</title>
-</head>
-<body class="bg-gradient-to-r from-indigo-300 via-white to-blue-300">
+</head> <!--bg-gradient-to-r from-indigo-300 via-white to-blue-300-->
+<body class="gradient">
     <div class="container scale-100" ;>
         <h1 class="md:text-6xl lg:text-10xl md:pt-5">Lauren Libretti</h1>
         <hr>
@@ -25,7 +25,6 @@
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse md:text-2xl" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item active">
@@ -35,10 +34,10 @@
                         <a class="nav-link" href="webdev.html">Web Dev</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="lx.html">Lighting</a>
+                        <a class="nav-link" href="lx.html">Lighting</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="Contact.html">Contact</a>
+                        <a class="nav-link" href="Contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -46,11 +45,10 @@
         <hr>
     </div>
     <!--container-->
-
     </nav>
-    
+    <!--bg-gradient-to-r from-indigo-300 via-pink-100 to-blue-->
     <div
-        class="Lauren bg-gradient-to-r from-indigo-300 via-pink-100 to-blue mx-10 grid grid-cols-0 sm:grid-rows-1 sm:grid-flow-col gap-5">
+        class="Lauren  mx-10 grid grid-cols-0 sm:grid-rows-1 sm:grid-flow-col gap-5">
         <div class=" row-start-0 col-start-0 sm:row-span-1 sm:row-start-1 sm:place-content-center">
             <img src="images/LaurenHeadshots002.jpg" alt="image of Lauren">
             </img>
@@ -70,7 +68,7 @@
         </div>
     </div><!--Lauren-->
     <footer>
-        <div class="footer m-0 place-content-end fixed-bottom">
+        <div class="footer m-0 place-content-end">
             <p class=" footer items-center">made with &hearts; by Lauren</p>
         </div>
         <!--footer-->
