--- a/lx.html
+++ b/lx.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <html lang="en-US">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400;1,700&amp;display=swap">
