--- a/webdev.html
+++ b/webdev.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <html lang="en-US">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <head>
             <link rel="stylesheet"  type="text/css" href="styles.css">
             <link rel="stylesheet" type="text/css" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/styles.css">
