--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                         <link rel="preconnect" href="https://fonts.gstatic.com">
                         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+                        <script src="https://kit.fontawesome.com/69f28465c2.js" crossorigin="anonymous"></script>
                         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--bootstrap--><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Lauren Libretti</title>
@@ -48,7 +49,7 @@
             <!--container-->
         </header>
         <section>
-            <div class="Lauren grid-container shadow-lg p-3 mb-5 bg-body rounded">
+            <div class=" grid-container shadow-lg p-3 mt-2 mx-5 bg-body rounded">
                 <div class="left">
                     <img src="images/LaurenHeadshots002.jpg" alt="image of Lauren">
                     </img>
@@ -77,6 +78,13 @@
         </section>
         <footer>
             <div class="footer">
+                    <a href="https://www.linkedin.com/in/lauren-libretti/"> <i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/lalibretti"> <i class="fab fa-github"></i></a>
+                    <a href="https://www.laurenlibretti.com/" class="lights light-lighting"><i class="far fa-lightbulb"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=5138727" class="fa"> <i class="fab fa-facebook-f"></i> </a>
+                    <a href="https://www.instagram.com/lalibretti/" class="in insta-instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="mailto:lalibretti616@gmail.com"><i class="far fa-envelope"></i></a>
+    
                 <p class=" footer items-center">made with &hearts; by Lauren</p>
             </div>
             <!--footer-->
