--- a/lx.html
+++ b/lx.html
@@ -19,7 +19,7 @@
         <div id="container">
         <header>
           <div class="container scale-100">
-            <h1 class="mt-4">Lauren Libretti</h1>
+            <h1>Lauren Libretti</h1>
             <hr class="hr-expand">
             <nav class="navbar navbar-expand-sm navbar-light sm-light">
               <a class="navbar-brand" href="#"></a>
@@ -49,7 +49,6 @@
           <!--container-->
           </header>
           <section>
-          
           <div class="grid-container shadow-lg p-3 mt-2 mx-5 bg-body rounded">
           <h2>Lighting Designs</h2>
           <div class="carousel">
@@ -86,10 +85,7 @@
           </div>
           <div class="px-5">
           <p>
-            Aesthetic fashion axe crucifix hella butcher. Next level actually dreamcatcher wayfarers flannel lo-fi four dollar
-            toast kickstarter gastropub affogato crucifix chicharrones live-edge deep v austin. Knausgaard chartreuse hexagon
-            sustainable biodiesel kickstarter, jean shorts thundercats copper mug mixtape shaman messenger bag tofu hoodie.
-            Farm-to-table PBR&B gentrify gluten-free mlkshk.
+            My lighting design work is motivated by curiousity and a desire to create. I have worked on projects all around the world with budgets large and small to create meaningful immersive experiences. 
           </p>
         </div>
         </div>
