--- a/webdev.html
+++ b/webdev.html
@@ -6,43 +6,75 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <head>
             <link rel="stylesheet"  type="text/css" href="styles.css">
-            <link rel="stylesheet" type="text/css" href="/Users/laurenlibretti/codes/Project 1/Project-1-8.17.20/styles.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;0,700;1,400;1,700&amp;display=swap">
-            <title>Lauren's web dev work</title>
+        <!--fonts/icons--><link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <script src="https://kit.fontawesome.com/69f28465c2.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <!--bootstrap--><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+            <title>Lauren's dev work</title>
         </head>
- <body>
-     <div id="container">
-    <header>
-        <h1>Lauren Libretti</h1>
-        <hr>
-        <div class="topnav">
-            <a href="index.html">home</a>
-          <a class="active" a href="webdev.html">web dev</a> 
-          <a  href="lx.html">lighting</a> 
-          <a href="Contact.html">contact</a> 
-        </div>
-        </header>
-            <h2>Web Development</h2>
-
-             <svg class="computer"xmlns="http://www.w3.org/2000/svg" width="86" height="86" viewBox="0 0 24 24"><path d="M0 0v19h24v-19h-24zm22 17h-20v-15h20v15zm-6.599 4l2.599 3h-12l2.599-3h6.802zm-6.401-16l6 4.674-2.538.427 1.538 3.095-1.571.804-1.546-3.157-1.883 1.759v-7.602z"/>
-            </svg>
- 
+        <body class="gradient">
+            <div id="container">
+            <header>
+              <div class="container scale-100">
+                <h1 class="mt-4">Lauren Libretti</h1>
+                <hr class="hr-expand">
+                <nav class="navbar navbar-expand-sm navbar-light sm-light">
+                  <a class="navbar-brand" href="#"></a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+                    aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse md:text-2xl" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav mx-auto mt-2 mt-lg-0 d-flex">
+                      <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="webdev.html">Web Dev</a>
+                      </li>
+                      <li class="nav-item active">
+                        <a class="nav-link" href="lx.html">Lighting <span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="Contact.html">Contact</a>
+                      </li>
+                    </ul>
+                  </div>
+                </nav>
+                <hr>
+              </div>
+              <!--container-->
+              </header>
+              <section>
+            <div class="grid-container shadow-lg p-3 mt-2 mx-5 bg-body rounded">
+                <h2>Developer</h2>
+                <i class="fas fa-laptop-code fa-10x"></i>
             <p>
                 Air plant XOXO la croix humblebrag hell of beard farm-to-table af. Marfa tousled raclette, schlitz pork belly single-origin coffee street art church-key. Selvage coloring book ennui pork belly occupy tacos. Fashion axe iceland sartorial, pour-over viral taiyaki seitan wayfarers deep v. Shabby chic chambray marfa humblebrag hella brunch enamel pin cliche mumblecore butcher. Direct trade echo park humblebrag vinyl, celiac vegan drinking vinegar messenger bag austin single-origin coffee church-key fanny pack helvetica yr.
 Dummy text? More like dummy thicc text, amirite?
             </p>
-            <footer id="bottom">
-                <a xlink href="https://github.com/lalibretti" class="github">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm0 6c-3.313 0-6 2.686-6 6 0 2.651 1.719 4.9 4.104 5.693.3.056.396-.13.396-.289v-1.117c-1.669.363-2.017-.707-2.017-.707-.272-.693-.666-.878-.666-.878-.544-.373.041-.365.041-.365.603.042.92.619.92.619.535.917 1.403.652 1.746.499.054-.388.209-.652.381-.802-1.333-.152-2.733-.667-2.733-2.965 0-.655.234-1.19.618-1.61-.062-.153-.268-.764.058-1.59 0 0 .504-.161 1.65.615.479-.133.992-.199 1.502-.202.51.002 1.023.069 1.503.202 1.146-.776 1.648-.615 1.648-.615.327.826.121 1.437.06 1.588.385.42.617.955.617 1.61 0 2.305-1.404 2.812-2.74 2.96.216.186.412.551.412 1.111v1.646c0 .16.096.347.4.288 2.383-.793 4.1-3.041 4.1-5.691 0-3.314-2.687-6-6-6z"/>
-                    </svg>
-                 </a>
-                <a xlink href="https://www.linkedin.com/in/lauren-libretti-38a26a40/"class="linkedin">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 8c0 .557-.447 1.008-1 1.008s-1-.45-1-1.008c0-.557.447-1.008 1-1.008s1 .452 1 1.008zm0 2h-2v6h2v-6zm3 0h-2v6h2v-2.861c0-1.722 2.002-1.881 2.002 0v2.861h1.998v-3.359c0-3.284-3.128-3.164-4-1.548v-1.093z"/></svg>
-                </a>
-                <br>
-                <br>
-                made with &hearts; by Lauren 
-            </footer>
-        </container>
+        </div>
+        </section>
+        <footer>
+            <div class="footer">
+              <a href="https://www.linkedin.com/in/lauren-libretti/"> <i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/lalibretti"> <i class="fab fa-github"></i></a>
+              <a href="https://www.laurenlibretti.com/" class="lights light-lighting"><i class="far fa-lightbulb"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=5138727" class="fa"> <i class="fab fa-facebook-f"></i> </a>
+              <a href="https://www.instagram.com/lalibretti/" class="in insta-instagram"><i class="fab fa-instagram"></i></a>
+              <a href="mailto:lalibretti616@gmail.com"><i class="far fa-envelope"></i></a>
+              <p class="footer items-center">made with &hearts; by Lauren</p>
+            </div><!--footer-->
+          </footer>
+        </div>
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
  </body>
 </html>
