--- a/Contact.html
+++ b/Contact.html
@@ -25,8 +25,8 @@
 
 <body class="gradient">
     <header>
-        <div class="container scale-100" ;>
-            <h1 class="mt-4">Lauren Libretti</h1>
+        <div class="scale-100" ;>
+            <h1 class="">Lauren Libretti</h1>
             <hr class="hr-expand">
             <nav class="navbar navbar-expand-sm navbar-light sm-light">
                 <a class="navbar-brand" href="#"></a>
@@ -57,27 +57,28 @@
     </header>
     <section>
         <div class="container">
-            <p>Affogato microdosing meditation, Gochujang heirloom blog literally, gentrify pop-up enamel pin normcore
-                whatever marfa PBR&B forage VHS lumbersexual retro.
+            <div class="grid-container shadow-lg p-3  mx-auto bg-body rounded">
+            <p>Connect with me to learn more about my skills as a developer and lighting designer. <br>I love talking shop and I'd be happy to talk with you about your project needs. 
             </p>
-            <div class="grid-container shadow-lg p-3 w-75 h-75 mx-auto bg-body rounded">
+            
                 <form action="https://formspree.io/mzbjqdlo" method="POST">
                     <form action="/action_page.php">
                         <label for="fname">name:
                         </label>
                         <br>
-                        <input type="text" id="fname" name="fname">
+                        <input type="text" id="fname" name="fname" placeholder="name">
                         <br>
                         <label for="email">email:
                         </label>
                         <br>
-                        <input type="text" id="email" name="email">
+                        <input type="text" id="email" name="email" placeholder="email">
                         <br>
                         <label for="message">message:</label>
                         <br>
-                        <input type="text" id="comment" name="comment">
-
+                        <input type="text" id="message" name="message" placeholder="message"> 
+                        <br>
                         <button type="submit" onclick="handleClick()">submit</button>
+                        <br>
                     </form>
                 </form>
             </div>
