--- a/webdev.html
+++ b/webdev.html
@@ -18,8 +18,8 @@
         <body class="gradient">
             <div id="container">
             <header>
-              <div class="container scale-100">
-                <h1 class="mt-4">Lauren Libretti</h1>
+              <div class="scale-100">
+                <h1 class="">Lauren Libretti</h1>
                 <hr class="hr-expand">
                 <nav class="navbar navbar-expand-sm navbar-light sm-light">
                   <a class="navbar-brand" href="#"></a>
@@ -52,11 +52,22 @@
             <div class="grid-container shadow-lg p-3 mt-2 mx-5 bg-body rounded">
                 <h2>Developer</h2>
                 <i class="fas fa-laptop-code fa-10x"></i>
-            <p>
-                Air plant XOXO la croix humblebrag hell of beard farm-to-table af. Marfa tousled raclette, schlitz pork belly single-origin coffee street art church-key. Selvage coloring book ennui pork belly occupy tacos. Fashion axe iceland sartorial, pour-over viral taiyaki seitan wayfarers deep v. Shabby chic chambray marfa humblebrag hella brunch enamel pin cliche mumblecore butcher. Direct trade echo park humblebrag vinyl, celiac vegan drinking vinegar messenger bag austin single-origin coffee church-key fanny pack helvetica yr.
-Dummy text? More like dummy thicc text, amirite?
+            <p class="pdev">
+                Air plant XOXO la croix humblebrag hell Marfa tousled raclette, schlitz pork belly single-origin coffee street art church-key. Selvage coloring book ennui pork belly occupy tacos. Fashion axe iceland sartorial, pour-over viral taiyaki seitan wayfarers deep v. Shabby chic chambray marfa humblebrag hella brunch enamel pin cliche mumblecore butcher. 
             </p>
-        </div>
+            <div class="devgrid">
+            <ul class="listdev">
+              <li class="lidev">HTML5  </li>
+              <li class="lidev">CSS </li>
+              <li class="lidev">Tailwind/Bootsrap </li>
+            </ul>
+            <ul class="listdev">
+              <li class="lidev">Future knowledge </li>
+              <li class="lidev">Thing I will master </li>
+              <li class="lidev">Look at how much I know </li>
+            </ul>
+          </div>
+        </div><!--grid-container-->
         </section>
         <footer>
             <div class="footer">
