--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     
     <body class="gradient">
         <header>
-            <div class="container scale-100";>
-                <h1 class="mt-4">Lauren Libretti</h1>
+            <div class="scale-100";>
+                <h1 class="font-size: 400px">Lauren Libretti</h1>
                 <hr class="hr-expand">
                 <nav class="navbar navbar-expand-sm navbar-light sm-light">
                     <a class="navbar-brand" href="#"></a>
