--- a/lx.html
+++ b/lx.html
@@ -5,20 +5,20 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
       <link rel="stylesheet"  type="text/css" href="styles.css">
       <!--fonts/icons--><link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
                         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <script src="https://kit.fontawesome.com/69f28465c2.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
       <!--bootstrap--><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <title>Lauren Lighting</title>
     </head>
     <body class="gradient">
         <div id="container">
         <header>
-          <div class="container scale-100">
+          <div class="scale-100">
             <h1>Lauren Libretti</h1>
             <hr class="hr-expand">
             <nav class="navbar navbar-expand-sm navbar-light sm-light">
@@ -61,7 +61,7 @@
               </ol>
               <!-- Wrapper for slides -->
               <div class="carousel-inner">
-                <div class="item active">
+                <div class="carousel-item active">
                   <img src="images/Jack_Ferver_Baranova-5566.jpg" alt="Everything is Imaginable" style="width:100%;">
                 </div>
                 <div class="item">
