--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body class="gradient">
         <header>
             <div class="scale-100";>
-                <h1 class="font-size: 400px">Lauren Libretti</h1>
+                <h1 class="">Lauren Libretti</h1>
                 <hr class="hr-expand">
                 <nav class="navbar navbar-expand-sm navbar-light sm-light">
                     <a class="navbar-brand" href="#"></a>
