Final edits before submission

--- a/lx.html
+++ b/lx.html
@@ -18,7 +18,7 @@
       <div id="container">
         <header>
           <div class="scale-100">
-            <h1>Lauren Libretti</h1>
+            <h1 class="font-size">Lauren Libretti</h1>
             <hr class="hr-expand">
             <nav class="navbar navbar-expand-sm navbar-light sm-light">
               <a class="navbar-brand" href="#"></a>
